// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderSelectDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ?Select LLM Provider                                                                                                 │
│                                                                                                                      │
│  Which AI provider would you like to use?                                                                            │
│                                                                                                                      │
│  (selected)     (not selected)    (not selected)  (not selected) Vertex(not selected) sLM     (not selected)         │
│  Gemini (Google Claude (Anthropic)OpenAI (OpenAI) AI (Google Cloud)    (Self-hosted / Local LLDidimAIStudio          │
│  AI)                                                                                          (Scenario)             │
│                                                                                                                      │
│  (Use Enter to select)                                                                                               │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ProviderSelectDialog > Snapshots > renders correctly with error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ?Select LLM Provider                                                                                                 │
│                                                                                                                      │
│  Which AI provider would you like to use?                                                                            │
│                                                                                                                      │
│  (selected)     (not selected)    (not selected)  (not selected) Vertex(not selected) sLM     (not selected)         │
│  Gemini (Google Claude (Anthropic)OpenAI (OpenAI) AI (Google Cloud)    (Self-hosted / Local LLDidimAIStudio          │
│  AI)                                                                                          (Scenario)             │
│                                                                                                                      │
│  Must select a provider                                                                                              │
│                                                                                                                      │
│  (Use Enter to select)                                                                                               │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
